<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:text="@string/location"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/siteId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/siteId"
            android:prompt="@string/location"
            android:spinnerMode="dropdown"
            android:theme="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/trackingId"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/trackingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/trackingId"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/customer"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/customerName"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/latitude"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/longitude"
            android:text="@string/lng_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/accuracy"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/acc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/duration"
            android:text="@string/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/start_button"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cancel_button"
            android:enabled="false"
            android:elevation="4dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_trip"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>